--- a/requirements.txt
+++ b/requirements.txt
@@ -1,98 +1,8 @@
-absl-py==2.1.0
-aiohappyeyeballs==2.4.3
-aiohttp==3.10.10
-aiosignal==1.3.1
-annotated-types==0.7.0
-anyio==4.6.2.post1
-arabic-reshaper==3.0.0
-asn1crypto==1.5.1
-attrs==24.2.0
-blinker==1.9.0
-BytesIO==0.0.2
-chardet==5.2.0
-click==8.1.7
-cmake==3.30.5
-cycler==0.12.1
-distlib==0.3.9
-contourpy==1.3.0
-cryptography==45.0.3
-cssselect2==0.8.0
-dlib==19.24.6
-dotenv==0.9.9
-face-recognition==1.3.0
-face_recognition_models==0.3.0
-filelock==3.16.1
-Flask==3.1.1
-flatbuffers==24.3.25
-fonttools==4.54.1
-frozenlist==1.5.0
-h11==0.14.0
-hpack==4.0.0
-html5lib==1.1
-httpcore==1.0.6
-httpx==0.27.2
-idna==3.4
-itsdangerous==2.2.0
-jax==0.4.35
-jaxlib==0.4.35
-Jinja2==3.1.6
-jiter==0.7.0
-joblib==1.5.1
-kiwisolver==1.4.7
-lxml==5.4.0
-MarkupSafe==3.0.2
-matplotlib==3.9.2
-mediapipe==0.10.18
-ml_dtypes==0.5.0
-multidict==6.1.0
-numpy==1.26.4
-openai==0.28.0
-opencv-contrib-python==4.10.0.84
-opencv-python==4.10.0.84
-opt_einsum==3.4.0
-oscrypto==1.3.0
-pandas==2.2.3
-pillow==11.1.0
-pycosat==0.6.3
-pycparser==2.21
-pydantic==2.9.2
-pydantic_core==2.23.4
-pydyf==0.11.0
-pyHanko==0.29.0
-pyhanko-certvalidator==0.27.0
-pyparsing==3.2.0
-pypdf==5.6.0
-pyphen==0.17.2
-python-bidi==0.6.6
-python-dateutil==2.9.0.post0
-python-dotenv==1.1.0
-pytz==2025.2
-PyVirtualDisplay==3.0
-PyYAML==6.0.2
-reportlab==4.4.1
-scikit-learn==1.6.1
-scipy==1.14.1
-seaborn==0.13.2
-sentencepiece==0.2.0
-setuptools==74.1.2
-six==1.16.0
-sniffio==1.3.1
-sounddevice==0.5.1
-svglib==1.5.1
-threadpoolctl==3.6.0
-tinycss2==1.4.0
-tinyhtml5==2.0.0
-tk==0.1.0
-typing_extensions==4.12.2
-tzdata==2025.2
-tzlocal==5.3.1
-uritools==5.0.0
-virtualenv==20.28.0
-weasyprint==65.1
-webencodings==0.5.1
-Werkzeug==3.1.3
-wheel==0.44.0
-xhtml2pdf==0.2.17
-yarl==1.17.1
-zopfli==0.2.3.post1
-zstandard==0.23.0
+Flask
+pandas
+seaborn
+matplotlib
+scikit-learn
+numpy
+xhtml2pdf
+python-dotenv
